# agent-sre

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  test.py
.github/workflows/: deploy-dev.yaml
agent/: __init__.py  agent.py  api.py  config.py  models.py
agent/llm/: client.py  pricing.py
agent/memory/: __init__.py  session.py  store.py
agent/observability/: __init__.py  context.py  metrics.py  tracer.py  tracing.py
agent/orchestration/: __init__.py  orchestrator.py  validator.py
agent/tools/: __init__.py
agent_sre.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
charts/: Chart.yaml  values-dev.yaml  values.yaml
charts/templates/: deployment.yaml  externalsecret.yaml  ingress.yaml  service.yaml
docs/observability/: 01-local-tracing-otel-jaeger.md  02-local-metrics-prometheus.md  03-github-actions-observability.md  README.md
infrastructure/applications/agent-sre/environments/dev/: application.yaml
tests/observability/: test_orchestration_instrumentation.py  test_tracing.py
